# lab3.1

./: CMakeLists.txt  Temperature.cc  Temperature.h  main.cpp  test.cpp  test_input.cc  test_input.cpp
